--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,16 @@
 {
     "manifest_version": 2,
     "name": "Bible Place Finder",
-    "version": "0.0.1",
-    "description": "This extension helps the user locate geographic places listed in the Bible and facilitates viewing them on a map.",
+    "version": "0.0.2",
+    "description": "This extension helps the user locate geographic places listed in the Bible and facilitates viewing them on maps.",
     "icons": {
         "16": "icons/bpf16x16.png",
         "32": "icons/bpf32x32.png",
         "48": "icons/bpf48x48.png",
         "128": "icons/bpf128x128.png"
     },
+
+    "web_accessible_resources": ["images/map3.png", "images/map4.png", "images/map5.png", "images/map6.png", "images/map7.png", "images/map13.png", "images/map15.png"],
 
     "homepage_url": "https://github.com/garydavenport73/findBiblePlaces/",
 
