--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-    "manifest_version": 2,
+    "manifest_version": 3,
     "name": "Bible Place Finder",
-    "version": "0.0.3",
+    "version": "0.0.4",
     "description": "This extension helps the user locate geographic places listed in the Bible and facilitates viewing them on maps.",
     "icons": {
         "16": "icons/bpf16x16.png",
@@ -9,16 +9,21 @@
         "48": "icons/bpf48x48.png",
         "128": "icons/bpf128x128.png"
     },
-
-    "web_accessible_resources": ["images/map3.png", "images/map4.png", "images/map5.png", "images/map6.png", "images/map7.png", "images/map13.png", "images/map15.png"],
-
+    "web_accessible_resources": [{
+        "resources": [
+            "images/map3.png",
+            "images/map4.png",
+            "images/map5.png",
+            "images/map6.png",
+            "images/map7.png",
+            "images/map13.png",
+            "images/map15.png"
+        ],
+        "matches": [
+            "<all_urls>"
+        ]
+    }],
     "homepage_url": "https://github.com/garydavenport73/findBiblePlaces/",
-
-    "browser_action": {
-        "default_icon": "icons/bpf16x16.png",
-        "default_title": "Bible Place Finder",
-        "default_popup": "src/popup.html"
-    },
     "content_scripts": [{
         "matches": [
             "<all_urls>"
@@ -27,5 +32,11 @@
             "/src/content.js"
         ],
         "run_at": "document_end"
-    }]
+    }],
+    "action": {
+        "default_icon": "icons/bpf16x16.png",
+        "default_title": "Bible Place Finder",
+        "default_popup": "src/popup.html"
+    },
+    "content_security_policy": {}
 }
